use FACET_DEFAULT for autocomplete; fixes #26819